# cempu

./: README.md  docker-compose.yml  package-lock.json
analysis/: .gitignore  Dockerfile  contextClassifier.py  contextProcessor.py  main.py  pyproject.toml  segments_turbo.pkl  semanticSearch.py  speakerDiarization.py  transcriber.py
analysis/outputs/: classifier_results.txt  contaminated_data.pkl  scores.txt  segments_large.pkl
backend/: .env  .gitignore  analysisParams.py  analysis_test.py  cempuMQTT.py  connectionManager.py  contextClassifier.py  contextProcessor.py  main.py  prepareClassifierData.py  pyproject.toml  speakerDiarization.py
backend/outputs/: TRANSCRIPTION.txt  classifier_data.pkl  classifier_results.txt  output_large.txt  output_tiny.txt  output_turbo.txt  prepared.txt  raw.txt  scores_large.txt  scores_turbo.txt  topic.txt  topics_prepared.txt
client/: cempuMQTT.py  main.py  mqtt.py  pyproject.toml  volumeAnalysis.py
collect/: main.py  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/lib/components/groupInfo/: groupInfo.svelte  groupInfo.variants.ts
dashboard/src/lib/stores/: analysisStore.ts  groupStore.ts  timerStore.ts
dashboard/src/routes/: +page.svelte
dashboard/src/routes/group/[id]/: +page.svelte
dashboard/src/routes/group/[slug]/: +page.svelte
